added gravitational force to sun

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,8 +44,8 @@
     <ImplicitlyExpandNETStandardFacades>false</ImplicitlyExpandNETStandardFacades>
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
-  <ItemGroup>     <Compile Include="Assets\OrbitGeneration.cs" />
-     <None Include="Assets\Assets\Textures\1.shader" />
+  <ItemGroup>     <Compile Include="Assets\CameraAngle.cs" />
+     <Compile Include="Assets\OrbitGeneration.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/brice/development/unity/orbit-simulation/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
